es-kibana.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elasticsearch

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: es-kibana
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: elasticsearch
        role: kibana
    spec:
      containers:
      - name: es-kibana
        image: docker.elastic.co/kibana/kibana-oss:6.7.0
        resources:
          limits:
            cpu: 500m
        ports:
        - containerPort: 5601
          name: http
        livenessProbe:
          httpGet:
            path: /status
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 10
          successThreshold: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: kibana
spec:
  selector:
    component: elasticsearch
    role: kibana
  ports:
  - name: http
    port: 80
    targetPort: 5601
    protocol: TCP
  type: NodePort
