es-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: es.house.local
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch
              servicePort: http
