es-kibana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: kibana.house.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: http
